--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,14 @@
+.container {
+    margin: 0 auto;
+    padding: 0px;
+    width: 100%;
+}
+
 h1 {
     color: white;
     font-family: Georgia, Times, "Times New Roman", serif;
-    text-align: center;
-    font-size: 40px;
-    padding: 25px;
+    height: inherit;
+    padding: 0px;
 }
 
 h2 {
@@ -23,12 +28,30 @@ h3 {
     font-weight: bold;
 }
 
-header {
+h4 {
+    background: #4aaaa5;
+    color: #ffffff;
+    position: relative;
+    text-align: center;
+    width: 250px;
+    bottom: 25px;
+    padding-top: 10px;
+    font-size: 24px;
+    font-family: Georgia, Times, "Times New Roman", serif;
+}
+
+.navbar-header {
     background-color: #4aaaa5;
-    float: left;
-    width: 300px;
-    height: 100px;
-    margin-left: 100px;
+    padding: 10px;
+    height: auto;
+}
+
+#navbar {
+    background-color: #ffffff;
+    border-color: #cccccc;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    width: 100%;
+    padding-right: 20px;
 }
 
 body {
@@ -48,84 +71,33 @@ li {
     text-align: center;
 }
 
-#content1 {
-    background-color: #ffffff;
-    border-color: #cccccc;
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    border-style: solid;
-    display: block;
-    padding-bottom: 40px;
-    margin-bottom: 20px;
-    border-bottom: 8px solid;
-    height: 60px;
-    width: 100%;
-    clear: both;
-}
-
-#content2 {
+.section {
     font: #777777;
-    border-color: #dddddd;
-    padding: 50px;
+    padding: 20px;
     margin: 0 auto;
-    width: 960px;
-}
-
-.clearfix::after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-#main-bio {
     border: solid 1px #dddddd;
-    width: 610px;
-    float: left;
     background-color: #ffffff;
     padding: 20px;
-    margin-top: 10px;
-    overflow: auto;
 }
 
-aside {
-    width: 250px;
+.connect {
     border: solid 1px #dddddd;
-    float: right;
     background-color: #ffffff;
     height: 120px;
     text-align: center;
     padding: 20px;
     margin-top: 10px;
-    list-style-type: none;
-}
-
-nav {
-    float: right;
-    width: 300px;
-    margin-right: 100px;
-    height: 100px;
-    padding-top: 40px;
-}
-
-.nav-bar {
-    display: inline;
-    border-right: solid 1px #777777;
-    padding-right: 10px;
-    padding: 10px;
-    text-decoration: none;
 }
 
 .nav-bar:last-child {
     border-right: none;
 }
 
-.connect {
-    display: inline;
-}
-
 .icon {
     padding: 5px;
     height: 70px;
     width: 70px;
+    display: inline;
 }
 
 #bio-image {
@@ -133,7 +105,7 @@ nav {
     padding-right: 10px;
 }
 
-footer {
+.copyright {
     background-color: #666666;
     color: white;
     display: block;
@@ -141,8 +113,8 @@ footer {
     border-top: 8px #4aaaa5 solid;
     height: 60px;
     width: 100%;
-    padding-top: 40px;
-    margin-top: 20px;
+    padding-top: 10px;
+    margin-top: 10px;
     clear: both;
 }
 
@@ -156,7 +128,14 @@ footer {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
-#portfolio {
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.portfolio-pics {
     border: solid 1px #dddddd;
     width: 610px;
     float: left;
@@ -164,27 +143,6 @@ footer {
     padding: 20px;
     margin-top: 10px;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-}
-
-.relative {
-    position: relative;
-    margin-bottom: 20px;
-    float: left;
-}
-
-.absolute {
-    background: #4aaaa5;
-    color: #ffffff;
-    position: absolute;
-    height: 50px;
-    text-align: center;
-    width: 250px;
-    left: 25px;
-    bottom: 25px;
-    float: left;
-    padding-top: 10px;
-    font-size: 24px;
-    font-family: Georgia, Times, "Times New Roman", serif;
 }
 
 .portfolio-image {
@@ -216,56 +174,3 @@ footer {
     border: solid 1px #dddddd;
     overflow: auto;
 }
-
-/* 
-Teal color (used for headings and backgrounds): `#4aaaa5`
-   * Regular font color (used for paragraphs and all text besides the headings): `#777777`
-   * Main header background color: `#ffffff`
-   * Main header border color: `#cccccc`
-   * Footer background color: `#666666`
-   * Main content background color: `#ffffff`
-   * Main content border color: `#dddddd`
-
-2. Fonts:
-   * For heading fonts use `font-family: 'Georgia', Times, Times New Roman, serif;`.
-   * For all other fonts use `'Arial', 'Helvetica Neue', Helvetica, sans-serif;`.
-
-3. Profile Image Found on `index.html`:
-   * Use a picture of yourself. 
-   * If you don't have a picture, you can grab a placeholder image from [LoremPixel](http://lorempixel.com/). Save the images to your `images` folder.
-
-4. Portfolio Images:
-   * Placeholder images can be found at [LoremPixel](http://lorempixel.com/). 
-   * Save the images to your `images` folder.
-
-5. Social Link Images (Github, LinkedIn,  StackOverflow, etc.):
-   * These images can be found on [IconFinder](https://www.iconfinder.com/).
-   * Save the images to your `images` folder.
-   * Ensure that these icons are live links to your GitHub, LinkedIn, and Stack Overflow profiles.
-
-6. Background Images:
-   * The background pattern used was found on [Subtle Patterns](https://subtlepatterns.com/). You can browse through that site and find whichever pattern you like.
-
-7. Dimensions:
-   * The entire content area is `960px` wide.
-   * The main section content is `650px` wide.
-   * The sidebar is `270px` wide. 
-
-### Bonus
-
-1. Make your pages more sophisticated by adding style to text links, to image links, and to buttons for when a user hovers their cursor over them. A CSS hover tutorial can be found [here](http://www.codeitpretty.com/2013/06/how-to-use-css-hover-effects.html). 
-
-2. You can use [Adobe Kuler](https://color.adobe.com/create/color-wheel/) to find colors that match the theme (in this case, the primary color is Teal `#4aaaa5`).
-
-3. Make a "sticky footer." You will notice the dark grey footer will always rest just below the content. This is fine whenever your site has enough content to push it down past the height of most monitors. But if there isn't much content in the body, the footer could rest in the middle of the page:
-   ![No sticky footer](Images/bonus_nosticky.jpg)
-   ![Has sticky footer](Images/bonus_stickyfooter.jpg)
-   * Try to code the footer in a way that it will always remain at the bottom of the page, no matter how short the content is. A sticky footer tutorial can be found [here](https://css-tricks.com/couple-takes-sticky-footer/). 
-
-### Helpful Hints
-
-* For help with Git and GitHub, be sure to consult the GitHub Supplemental Guide sent to you in class.
-
-* Don't forget to look into these concepts: `float`, `padding`, `margin`, `display`, `overflow`, `clear` and `text-align`.
-
-   */
